test-data/apigee1/json-dumps/compute-effective-firewalls-apigee-network.json
{
  "firewalls": [
    {
      "kind": "compute#firewall",
      "id": "1474978006922447998",
      "creationTimestamp": "2023-06-17T10:51:13.563-07:00",
      "name": "k8s-allow-lb-to-apigee-proxy",
      "description": "",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-apigee1-aaaa/global/networks/apigee-network",
      "priority": 900,
      "sourceRanges": [
        "130.211.0.0/22",
        "35.191.0.0/16"
      ],
      "targetTags": [
        "gke-apigee-proxy"
      ],
      "allowed": [
        {
          "IPProtocol": "tcp",
          "ports": [
            "443"
          ]
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-apigee1-aaaa/global/firewalls/k8s-allow-lb-to-apigee-proxy"
    }
  ],
  "firewallPolicys": [
    {
      "name": "902824820698",
      "type": "HIERARCHY",
      "shortName": "default-firewall-policy",
      "displayName": "default-firewall-policy",
      "rules": [
        {
          "kind": "compute#firewallPolicyRule",
          "description": "",
          "priority": 0,
          "match": {
            "srcIpRanges": [
              "34.82.66.0/24",
              "34.82.90.0/24",
              "34.82.98.0/24",
              "34.82.160.0/24",
              "34.82.166.128/25"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "tcp"
              },
              {
                "ipProtocol": "udp"
              }
            ]
          },
          "action": "allow",
          "direction": "INGRESS",
          "enableLogging": false
        },
        {
          "kind": "compute#firewallPolicyRule",
          "description": "",
          "priority": 1,
          "match": {
            "destIpRanges": [
              "34.83.160.25/32"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "tcp"
              },
              {
                "ipProtocol": "udp"
              }
            ]
          },
          "action": "allow",
          "direction": "EGRESS",
          "enableLogging": false
        },
        {
          "kind": "compute#firewallPolicyRule",
          "description": "",
          "priority": 2,
          "match": {
            "destIpRanges": [
              "34.66.22.47/32",
              "34.66.157.124/32",
              "34.66.164.57/32",
              "34.66.184.118/32",
              "34.66.236.234/32",
              "34.73.86.171/32",
              "34.73.183.215/32",
              "34.76.42.179/32",
              "34.76.71.13/32",
              "34.76.143.192/32",
              "34.76.244.236/32",
              "35.184.49.127/32",
              "35.184.70.255/32",
              "35.184.144.234/32",
              "35.184.228.49/32",
              "35.185.65.36/32",
              "35.185.252.238/32",
              "35.186.160.196/32",
              "35.186.167.183/32",
              "35.186.182.184/32",
              "35.187.2.178/32",
              "35.187.82.234/32",
              "35.187.121.21/32",
              "35.187.169.157/32",
              "35.187.189.105/32",
              "35.188.28.255/32",
              "35.188.58.237/32",
              "35.188.97.47/32",
              "35.188.225.200/32",
              "35.188.244.131/32",
              "35.189.66.48/32",
              "35.189.85.77/32",
              "35.189.87.27/32",
              "35.189.87.89/32",
              "35.189.88.203/32",
              "35.189.93.96/32",
              "35.189.99.57/32",
              "35.189.109.1/32",
              "35.189.114.89/32",
              "35.189.228.0/32",
              "35.189.236.145/32",
              "35.190.139.214/32",
              "35.190.154.170/32",
              "35.190.196.20/32",
              "35.192.2.32/32",
              "35.192.62.107/32",
              "35.192.160.155/32",
              "35.192.233.245/32",
              "35.192.235.233/32",
              "35.193.56.224/32",
              "35.193.76.157/32",
              "35.193.123.0/32",
              "35.193.195.38/32",
              "35.193.200.222/32",
              "35.193.229.109/32",
              "35.193.242.255/32",
              "35.194.66.217/32",
              "35.194.70.28/32",
              "35.195.3.83/32",
              "35.195.53.78/32",
              "35.195.68.98/32",
              "35.195.101.29/32",
              "35.195.113.177/32",
              "35.195.114.253/32",
              "35.195.123.113/32",
              "35.195.140.251/32",
              "35.195.156.23/32",
              "35.195.206.55/32",
              "35.196.5.130/32",
              "35.196.20.59/32",
              "35.196.89.212/32",
              "35.196.115.11/32",
              "35.196.138.125/32",
              "35.196.140.152/32",
              "35.196.217.248/32",
              "35.196.220.144/32",
              "35.197.30.80/32",
              "35.197.38.28/32",
              "35.197.50.103/32",
              "35.197.53.127/32",
              "35.197.55.215/32",
              "35.197.56.191/32",
              "35.197.65.24/32",
              "35.197.75.108/32",
              "35.197.85.13/32",
              "35.197.107.117/32",
              "35.197.108.157/32",
              "35.197.112.50/32",
              "35.197.115.114/32",
              "35.197.125.130/32",
              "35.197.192.22/32",
              "35.197.205.253/32",
              "35.197.210.140/32",
              "35.197.226.207/32",
              "35.197.233.133/32",
              "35.197.246.39/32",
              "35.197.252.73/32",
              "35.197.252.248/32",
              "35.197.254.244/32",
              "35.198.78.35/32",
              "35.198.79.98/32",
              "35.198.84.172/32",
              "35.198.106.28/32",
              "35.198.140.217/32",
              "35.198.158.161/32",
              "35.198.159.26/32",
              "35.199.12.20/32",
              "35.199.27.54/32",
              "35.199.39.165/32",
              "35.199.40.52/32",
              "35.199.54.197/32",
              "35.199.56.100/32",
              "35.199.58.90/32",
              "35.199.154.123/32",
              "35.199.162.95/32",
              "35.199.162.137/32",
              "35.199.175.152/32",
              "35.202.32.145/32",
              "35.202.62.128/32",
              "35.202.98.132/32",
              "35.202.118.10/32",
              "35.202.240.183/32",
              "35.203.142.250/32",
              "35.203.145.190/32",
              "35.203.151.233/32",
              "35.203.155.169/32",
              "35.203.161.173/32",
              "35.203.175.233/32",
              "35.203.184.97/32",
              "35.203.191.135/32",
              "35.204.1.221/32",
              "35.204.12.60/32",
              "35.204.14.12/32",
              "35.204.15.55/32",
              "35.204.15.122/32",
              "35.204.24.135/32",
              "35.204.37.76/32",
              "35.204.46.52/32",
              "35.204.50.90/32",
              "35.204.52.86/32",
              "35.204.60.99/32",
              "35.204.66.9/32",
              "35.204.66.56/32",
              "35.204.74.72/32",
              "35.204.78.201/32",
              "35.204.88.26/32",
              "35.204.98.108/32",
              "35.204.105.22/32",
              "35.204.108.151/32",
              "35.204.115.3/32",
              "35.204.119.162/32",
              "35.204.122.243/32",
              "35.204.123.133/32",
              "35.204.126.58/32",
              "35.204.126.80/32",
              "35.204.129.200/32",
              "35.204.130.59/32",
              "35.204.131.109/32",
              "35.204.141.187/32",
              "35.204.142.195/32",
              "35.204.152.168/32",
              "35.204.162.183/32",
              "35.204.167.122/32",
              "35.204.169.211/32",
              "35.204.172.80/32",
              "35.204.178.217/32",
              "35.204.179.111/32",
              "35.204.190.183/32",
              "35.204.195.27/32",
              "35.204.195.49/32",
              "35.204.196.11/32",
              "35.204.201.70/32",
              "35.204.203.109/32",
              "35.204.207.219/32",
              "35.204.208.228/32",
              "35.204.215.87/32",
              "35.204.217.46/32",
              "35.204.223.176/32",
              "35.204.225.30/32",
              "35.204.225.143/32",
              "35.204.231.201/32",
              "35.204.241.10/32",
              "35.204.251.54/32",
              "35.204.255.0/32",
              "35.205.72.232/32",
              "35.205.138.68/32",
              "35.205.159.40/32",
              "35.205.227.167/32",
              "35.205.228.216/32",
              "35.221.0.61/32",
              "35.221.3.121/32",
              "35.221.3.125/32",
              "35.221.5.200/32",
              "35.221.6.218/32",
              "35.221.13.23/32",
              "35.221.13.133/32",
              "35.221.15.163/32",
              "35.221.16.189/32",
              "35.221.23.24/32",
              "35.221.24.229/32",
              "35.221.24.236/32",
              "35.221.28.149/32",
              "35.221.32.150/32",
              "35.221.32.171/32",
              "35.221.48.160/32",
              "35.221.51.129/32",
              "35.221.55.211/32",
              "35.221.57.195/32",
              "35.222.15.64/32",
              "35.222.245.253/32",
              "35.224.62.254/32",
              "35.224.106.23/32",
              "35.224.115.137/32",
              "35.224.231.238/32",
              "35.225.8.27/32",
              "35.225.39.39/32",
              "35.225.49.103/32",
              "35.225.181.33/32",
              "35.225.226.221/32",
              "35.226.0.100/32",
              "35.226.37.22/32",
              "35.226.94.146/32",
              "35.226.134.67/32",
              "35.226.227.112/32",
              "35.227.24.50/32",
              "35.227.63.36/32",
              "35.227.148.154/32",
              "35.227.164.46/32",
              "35.227.166.150/32",
              "35.227.169.20/32",
              "35.227.185.153/32",
              "35.228.12.151/32",
              "35.228.23.19/32",
              "35.228.24.225/32",
              "35.228.24.253/32",
              "35.228.43.115/32",
              "35.228.46.55/32",
              "35.228.50.150/32",
              "35.228.61.168/32",
              "35.228.62.248/32",
              "35.228.73.69/32",
              "35.228.126.203/32",
              "35.228.133.241/32",
              "35.228.136.253/32",
              "35.228.141.80/32",
              "35.228.151.221/32",
              "35.228.153.106/32",
              "35.228.153.173/32",
              "35.228.165.20/32",
              "35.228.182.144/32",
              "35.228.194.236/32",
              "35.228.207.201/32",
              "35.228.211.51/32",
              "35.228.225.15/32",
              "35.228.240.231/32",
              "35.228.241.74/32",
              "35.228.243.184/32",
              "35.228.247.232/32",
              "35.228.248.131/32",
              "35.228.248.202/32",
              "35.229.32.120/32",
              "35.229.40.166/32",
              "35.229.98.55/32",
              "35.229.121.90/32",
              "35.230.1.88/32",
              "35.230.9.24/32",
              "35.230.25.200/32",
              "35.230.49.71/32",
              "35.230.81.240/32",
              "35.230.85.180/32",
              "35.230.108.26/32",
              "35.230.119.89/32",
              "35.230.125.171/32",
              "35.230.130.62/32",
              "35.230.133.130/32",
              "35.230.136.123/32",
              "35.230.136.172/32",
              "35.230.137.112/32",
              "35.230.138.244/32",
              "35.230.144.1/32",
              "35.230.149.124/32",
              "35.230.150.81/32",
              "35.230.150.240/32",
              "35.230.154.90/32",
              "35.230.174.232/32",
              "35.230.177.25/32",
              "35.230.177.73/32",
              "35.230.182.231/32",
              "35.230.189.18/32",
              "35.231.27.146/32",
              "35.231.37.13/32",
              "35.231.76.215/32",
              "35.231.79.129/32",
              "35.231.92.50/32",
              "35.231.193.144/32",
              "35.231.200.66/32",
              "35.231.205.62/32",
              "35.231.250.82/32",
              "35.232.45.232/32",
              "35.232.94.168/32",
              "35.232.103.119/32",
              "35.232.127.101/32",
              "35.232.139.151/32",
              "35.232.180.7/32",
              "35.233.28.18/32",
              "35.233.40.72/32",
              "35.233.72.242/32",
              "35.233.89.166/32",
              "35.233.99.60/32",
              "35.233.123.101/32",
              "35.233.131.47/32",
              "35.233.132.228/32",
              "35.233.135.75/32",
              "35.233.136.180/32",
              "35.233.139.203/32",
              "35.233.139.255/32",
              "35.233.141.127/32",
              "35.233.146.241/32",
              "35.233.152.253/32",
              "35.233.155.27/32",
              "35.233.159.73/32",
              "35.233.160.114/32",
              "35.233.170.137/32",
              "35.233.177.225/32",
              "35.233.181.13/32",
              "35.233.209.158/32",
              "35.233.211.146/32",
              "35.233.215.174/32",
              "35.233.230.10/32",
              "35.233.237.249/32",
              "35.233.240.97/32",
              "35.233.242.76/32",
              "35.233.243.235/32",
              "35.233.248.120/32",
              "35.233.251.200/32",
              "35.234.74.152/32",
              "35.234.76.60/32",
              "35.234.82.93/32",
              "35.234.97.50/32",
              "35.234.101.43/32",
              "35.234.113.47/32",
              "35.234.124.92/32",
              "35.234.131.84/32",
              "35.234.133.222/32",
              "35.234.141.85/32",
              "35.234.145.128/32",
              "35.234.149.213/32",
              "35.234.150.44/32",
              "35.234.154.126/32",
              "35.234.156.114/32",
              "35.235.66.156/32",
              "35.235.67.142/32",
              "35.235.70.49/32",
              "35.235.77.169/32",
              "35.235.78.149/32",
              "35.235.79.199/32",
              "35.235.82.180/32",
              "35.235.87.249/32",
              "35.235.91.184/32",
              "35.235.92.0/32",
              "35.235.93.225/32",
              "35.235.96.28/32",
              "35.235.100.190/32",
              "35.235.103.216/32",
              "35.235.109.42/32",
              "35.235.110.23/32",
              "35.235.111.166/32",
              "35.235.114.124/32",
              "35.235.114.133/32",
              "35.235.115.36/32",
              "35.235.119.204/32",
              "35.235.120.50/32",
              "35.235.122.190/32",
              "35.235.123.217/32",
              "35.235.124.32/32",
              "35.235.127.151/32",
              "35.236.3.134/32",
              "35.236.6.28/32",
              "35.236.8.4/32",
              "35.236.9.102/32",
              "35.236.10.36/32",
              "35.236.11.136/32",
              "35.236.13.104/32",
              "35.236.16.239/32",
              "35.236.17.90/32",
              "35.236.18.17/32",
              "35.236.23.120/32",
              "35.236.23.130/32",
              "35.236.24.148/32",
              "35.236.27.126/32",
              "35.236.30.92/32",
              "35.236.32.83/32",
              "35.236.41.7/32",
              "35.236.45.102/32",
              "35.236.48.119/32",
              "35.236.48.252/32",
              "35.236.49.204/32",
              "35.236.50.63/32",
              "35.236.50.98/32",
              "35.236.52.137/32",
              "35.236.52.183/32",
              "35.236.54.197/32",
              "35.236.54.236/32",
              "35.236.54.249/32",
              "35.236.66.213/32",
              "35.236.68.82/32",
              "35.236.69.183/32",
              "35.236.72.182/32",
              "35.236.76.220/32",
              "35.236.77.63/32",
              "35.236.77.180/32",
              "35.236.80.100/32",
              "35.236.82.58/32",
              "35.236.83.60/32",
              "35.236.84.168/32",
              "35.236.86.111/32",
              "35.236.87.95/32",
              "35.236.90.57/32",
              "35.236.94.222/32",
              "35.236.97.24/32",
              "35.236.100.13/32",
              "35.236.103.215/32",
              "35.236.107.110/32",
              "35.236.109.101/32",
              "35.236.110.188/32",
              "35.236.111.104/32",
              "35.236.113.26/32",
              "35.236.114.139/32",
              "35.236.116.189/32",
              "35.236.118.35/32",
              "35.236.120.14/32",
              "35.236.123.127/32",
              "35.236.124.70/32",
              "35.236.125.16/32",
              "35.236.126.78/32",
              "35.236.194.140/32",
              "35.236.196.78/32",
              "35.236.204.22/32",
              "35.236.207.204/32",
              "35.236.209.10/32",
              "35.236.219.57/32",
              "35.236.225.160/32",
              "35.236.226.16/32",
              "35.236.228.33/32",
              "35.236.228.41/32",
              "35.236.241.145/32",
              "35.236.242.169/32",
              "35.237.6.119/32",
              "35.237.16.252/32",
              "35.237.32.116/32",
              "35.237.33.255/32",
              "35.237.61.35/32",
              "35.237.129.145/32",
              "35.237.134.39/32",
              "35.237.182.230/32",
              "35.237.209.128/32",
              "35.237.210.45/32",
              "35.237.222.50/32",
              "35.237.235.241/32",
              "35.237.241.81/32",
              "35.237.241.194/32",
              "35.237.245.143/32",
              "35.237.248.171/32",
              "35.239.35.153/32",
              "35.239.51.8/32",
              "35.239.54.20/32",
              "35.239.68.63/32",
              "35.240.58.39/32",
              "35.240.104.231/32",
              "35.241.144.57/32",
              "35.241.145.54/32",
              "35.241.197.193/32",
              "35.241.216.166/32",
              "35.241.229.156/32",
              "35.241.233.190/32",
              "35.242.129.249/32",
              "35.242.129.253/32",
              "35.242.138.94/32",
              "35.242.140.69/32",
              "35.242.142.106/32",
              "35.242.152.55/32",
              "35.242.154.29/32",
              "35.242.154.92/32",
              "35.242.158.36/32",
              "35.242.164.105/32",
              "35.242.166.56/32",
              "35.242.170.95/32",
              "35.242.173.23/32",
              "35.242.175.90/32",
              "35.242.175.97/32",
              "35.242.180.151/32",
              "35.242.181.42/32",
              "35.242.185.45/32",
              "35.242.204.141/32",
              "35.242.205.212/32",
              "35.242.207.188/32",
              "35.242.214.46/32",
              "35.242.217.158/32",
              "35.242.241.237/32",
              "35.242.245.200/32",
              "35.242.248.79/32",
              "35.242.254.63/32",
              "35.243.170.35/32",
              "35.243.182.120/32",
              "35.243.196.214/32",
              "35.243.220.101/32",
              "35.245.1.43/32",
              "35.245.9.122/32",
              "35.245.22.62/32",
              "35.245.24.132/32",
              "35.245.27.85/32",
              "35.245.30.90/32",
              "35.245.34.81/32",
              "35.245.42.72/32",
              "35.245.45.3/32",
              "35.245.57.50/32",
              "35.245.75.145/32",
              "35.245.78.59/32",
              "35.245.88.198/32",
              "35.245.93.125/32",
              "35.245.96.171/32",
              "35.245.98.28/32",
              "35.245.110.144/32",
              "35.245.120.13/32",
              "35.245.145.56/32",
              "35.245.159.53/32",
              "35.245.170.193/32",
              "35.245.174.162/32",
              "35.245.189.22/32",
              "35.245.216.119/32",
              "35.245.237.81/32",
              "35.245.246.95/32",
              "35.245.247.140/32",
              "35.245.248.36/32",
              "35.246.2.43/32",
              "35.246.4.121/32",
              "35.246.7.114/32",
              "35.246.10.143/32",
              "35.246.10.171/32",
              "35.246.37.189/32",
              "35.246.42.142/32",
              "35.246.43.190/32",
              "35.246.48.237/32",
              "35.246.49.124/32",
              "35.246.52.251/32",
              "35.246.54.37/32",
              "35.246.54.181/32",
              "35.246.63.228/32",
              "35.246.66.175/32",
              "35.246.68.114/32",
              "35.246.70.66/32",
              "35.246.71.83/32",
              "35.246.73.137/32",
              "35.246.73.145/32",
              "35.246.75.188/32",
              "35.246.77.251/32",
              "35.246.85.156/32",
              "35.246.87.183/32",
              "35.246.90.190/32",
              "35.246.94.110/32",
              "35.246.97.150/32",
              "35.246.105.99/32",
              "35.246.111.223/32",
              "35.247.1.109/32",
              "35.247.43.108/32",
              "35.247.43.209/32",
              "35.247.50.154/32",
              "35.247.65.167/32",
              "35.247.118.218/32",
              "104.154.113.115/32",
              "104.154.208.253/32",
              "104.154.209.62/32",
              "104.155.18.24/32",
              "104.155.21.175/32",
              "104.155.33.97/32",
              "104.155.105.38/32",
              "104.155.111.169/32",
              "104.155.121.201/32",
              "104.155.143.151/32",
              "104.196.4.14/32",
              "104.196.46.139/32",
              "104.196.49.118/32",
              "104.196.100.39/32",
              "104.196.171.139/32",
              "104.196.231.87/32",
              "104.196.241.37/32",
              "104.196.244.23/32",
              "104.196.246.50/32",
              "104.197.115.25/32",
              "104.197.119.104/32",
              "104.197.181.96/32",
              "104.197.193.37/32",
              "104.197.239.95/32",
              "104.198.14.68/32",
              "104.198.99.186/32",
              "104.198.179.193/32",
              "104.198.223.59/32",
              "104.198.228.146/32",
              "104.198.255.246/32",
              "104.199.4.115/32",
              "146.148.12.186/32"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "tcp"
              },
              {
                "ipProtocol": "udp"
              }
            ]
          },
          "action": "allow",
          "direction": "EGRESS",
          "enableLogging": false
        },
        {
          "kind": "compute#firewallPolicyRule",
          "description": "",
          "priority": 600,
          "match": {
            "srcIpRanges": [
              "35.235.240.0/20"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "tcp",
                "ports": [
                  "22",
                  "3389",
                  "5900-5901"
                ]
              }
            ]
          },
          "action": "allow",
          "direction": "INGRESS",
          "enableLogging": false
        },
        {
          "kind": "compute#firewallPolicyRule",
          "description": "",
          "priority": 601,
          "match": {
            "srcIpRanges": [
              "35.191.0.0/16",
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "169.254.169.254",
              "108.170.220.0/23"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "all"
              }
            ]
          },
          "action": "goto_next",
          "direction": "INGRESS",
          "enableLogging": false
        },
        {
          "kind": "compute#firewallPolicyRule",
          "description": "",
          "priority": 602,
          "match": {
            "srcIpRanges": [
              "10.0.0.0/8",
              "172.16.0.0/12",
              "192.168.0.0/16",
              "100.64.0.0/10"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "all"
              }
            ]
          },
          "action": "goto_next",
          "direction": "INGRESS",
          "enableLogging": false
        },
        {
          "kind": "compute#firewallPolicyRule",
          "description": "",
          "priority": 603,
          "match": {
            "srcIpRanges": [
              "35.199.192.0/19"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "tcp",
                "ports": [
                  "53"
                ]
              },
              {
                "ipProtocol": "udp",
                "ports": [
                  "53"
                ]
              }
            ]
          },
          "action": "goto_next",
          "direction": "INGRESS",
          "enableLogging": false
        },
        {
          "kind": "compute#firewallPolicyRule",
          "description": "",
          "priority": 604,
          "match": {
            "srcIpRanges": [
              "107.178.230.64/26",
              "35.199.224.0/19"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "tcp",
                "ports": [
                  "667"
                ]
              },
              {
                "ipProtocol": "udp",
                "ports": [
                  "665-666"
                ]
              },
              {
                "ipProtocol": "icmp"
              }
            ]
          },
          "action": "goto_next",
          "direction": "INGRESS",
          "enableLogging": false
        },
        {
          "kind": "compute#firewallPolicyRule",
          "description": "",
          "priority": 700,
          "match": {
            "srcIpRanges": [
              "0.0.0.0/0"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "all"
              }
            ]
          },
          "action": "deny",
          "direction": "INGRESS",
          "enableLogging": false
        },
        {
          "kind": "compute#firewallPolicyRule",
          "description": "",
          "priority": 2147483644,
          "match": {
            "destIpRanges": [
              "::/0"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "all"
              }
            ]
          },
          "action": "goto_next",
          "direction": "EGRESS",
          "enableLogging": false
        },
        {
          "kind": "compute#firewallPolicyRule",
          "description": "",
          "priority": 2147483646,
          "match": {
            "destIpRanges": [
              "0.0.0.0/0"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "all"
              }
            ]
          },
          "action": "goto_next",
          "direction": "EGRESS",
          "enableLogging": false
        },
        {
          "kind": "compute#firewallPolicyRule",
          "description": "",
          "priority": 2147483647,
          "match": {
            "srcIpRanges": [
              "0.0.0.0/0"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "all"
              }
            ]
          },
          "action": "goto_next",
          "direction": "INGRESS",
          "enableLogging": false
        }
      ]
    }
  ]
}
