test-data/apigee1/json-dumps/compute-network-apigee-network.json
{
  "autoCreateSubnetworks": false,
  "creationTimestamp": "2023-02-15T22:23:14.098-08:00",
  "id": "6378627999444530493",
  "kind": "compute#network",
  "name": "apigee-network",
  "networkFirewallPolicyEnforcementOrder": "AFTER_CLASSIC_FIREWALL",
  "peerings": [
    {
      "autoCreateRoutes": true,
      "exchangeSubnetRoutes": true,
      "exportCustomRoutes": false,
      "exportSubnetRoutesWithPublicIp": false,
      "importCustomRoutes": false,
      "importSubnetRoutesWithPublicIp": false,
      "name": "servicenetworking-googleapis-com",
      "network": "https://www.googleapis.com/compute/v1/projects/REDACTED/global/networks/servicenetworking",
      "stackType": "IPV4_ONLY",
      "state": "ACTIVE",
      "stateDetails": "[2023-04-27T12:13:45.847-07:00]: Connected."
    }
  ],
  "routingConfig": {
    "routingMode": "REGIONAL"
  },
  "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-apigee1-aaaa/global/networks/apigee-network",
  "selfLinkWithId": "https://www.googleapis.com/compute/v1/projects/gcpdiag-apigee1-aaaa/global/networks/6378627999444530493",
  "subnetworks": [
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-apigee1-aaaa/regions/us-central1/subnetworks/apigee-subnetwork"
  ]
}
