test-data/apigee1/json-dumps/compute-subnetworks-apigee-subnetwork.json
{
  "kind": "compute#subnetwork",
  "id": "8347197685109000822",
  "creationTimestamp": "2023-04-30T20:40:09.697-07:00",
  "name": "apigee-subnetwork",
  "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-apigee1-aaaa/global/networks/apigee-network",
  "ipCidrRange": "10.128.0.0/20",
  "gatewayAddress": "10.128.0.1",
  "region": "https://www.googleapis.com/compute/v1/projects/gcpdiag-apigee1-aaaa/regions/us-central1",
  "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-apigee1-aaaa/regions/us-central1/subnetworks/apigee-subnetwork",
  "privateIpGoogleAccess": true,
  "fingerprint": "k7qIdBCe3Ew=",
  "enableFlowLogs": false,
  "privateIpv6GoogleAccess": "DISABLE_GOOGLE_ACCESS",
  "purpose": "PRIVATE",
  "logConfig": {
    "enable": false
  },
  "stackType": "IPV4_ONLY"
}
