test-data/apigee1/json-dumps/kms-key-iam-policy.json
{
  "bindings": [
    {
      "members": [
        "serviceAccount:service-12340005@gcp-sa-apigee.iam.gserviceaccount.com"
      ],
      "role": "roles/cloudkms.cryptoKeyEncrypterDecrypter"
    }
  ],
  "etag": "BwXmKjXAWYM=",
  "version": 1
}
